created list page without formatting

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,6 @@
-<h1>Files Working</h1>
+<h1>Ticket Viewer</h1>
+<a href="">View All Tickets</a>
+<form action="/list_tickets">
+    <input type="text" placeholder="Enter Ticket Number">
+    <button>Search</button>
+</form>
