all links/paths working from home through to individual ticket view, including search on homepage to skip to a ticket

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,6 @@
 <h1>Ticket Viewer</h1>
-<a href="">View All Tickets</a>
-<form action="/list_tickets">
-    <input type="text" placeholder="Enter Ticket Number">
+<a href="/ticket-list">View all tickets</a>
+<form action="/ticket-info">
+    <input type="text" name="id" placeholder="Enter Ticket Number">
     <button>Search</button>
 </form>
