--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,6 +6,9 @@
   <link rel='stylesheet' href='/stylesheets/main.css'>
 </head>
 <body>
+  <header>
+      <a href="/"><img src="/media/logo.png" alt=""></a>
+  </header>
 
   <%= yield %>
 
