error message thrown when non valid ticket number

--- a/views/view_ticket.erb
+++ b/views/view_ticket.erb
@@ -8,5 +8,5 @@
     <p class="description">Description: <%=@ticket_object["ticket"]["description"]%></p>
 
     <a class="button-look" href="/">Home</a>
-    <a class="button-look" href="/ticket-list">Back to all tickets</a>
+    <a class="button-look" href="/ticket-list">All Tickets</a>
 </section>
