--- a/views/list_tickets.erb
+++ b/views/list_tickets.erb
@@ -15,20 +15,25 @@
 
 
 <div class="container">
-  <%if @tickets["previous_page"] %> 
-    <form action="/ticket-list/paginate">
-      <input type="hidden" name="link" value="<%=@tickets["previous_page"]%>">
-      <button class="button-look">Previous Page</button>
-    </form>
-  <% end %> 
+  <div class="container navigation">
+    <%if @tickets["previous_page"] %> 
+      <form action="/ticket-list/paginate">
+        <input type="hidden" name="link" value="<%=@tickets["previous_page"]%>">
+        <button class="button-look">Previous Page</button>
+      </form>
+    <% end %> 
 
-  <%if @tickets["next_page"] %> 
-    <form action="/ticket-list/paginate">
-      <input type="hidden" name="link" value="<%=@tickets["next_page"]%>">
-      <button class="button-look">Next Page</button>
-    </form>
-  <% end %> 
+    <%if @tickets["next_page"] %> 
+      <form action="/ticket-list/paginate">
+        <input type="hidden" name="link" value="<%=@tickets["next_page"]%>">
+        <button class="button-look">Next Page</button>
+      </form>
+    <% end %> 
 
-  <a class="button-look" href="/">Home</a>
+    <a class="button-look" href="/">Home</a>
+  </div>
+  <div class="right-align">
+    <p>Displaying <%=@tickets["tickets"].count%> of <%=@tickets["count"]%></p>  
+  </div>  
 </div>
 
