--- a/views/view_ticket.erb
+++ b/views/view_ticket.erb
@@ -8,5 +8,5 @@
     <p class="description">Description: <%=@ticket_object["ticket"]["description"]%></p>
 
     <a class="button-look" href="/">Home</a>
-    <a class="button-look" href="/ticket-list">All Tickets</a>
+    <a class="button-look" href="/ticket-list?link=https://roisin.zendesk.com/api/v2/tickets.json?per_page=25">All Tickets</a>
 </section>
