--- a/views/index.erb
+++ b/views/index.erb
@@ -8,6 +8,6 @@
             <input type="text" name="id" placeholder="Enter Ticket Number">
             <button class="button-look">Find Ticket</button>
         </form>
-        <a class="button-look" href="/ticket-list">View all tickets</a>
+        <a class="button-look" href="/ticket-list?link=https://roisin.zendesk.com/api/v2/tickets.json?per_page=25">View all tickets</a>
     </div>
 </section>
