readme file added

--- a/views/index.erb
+++ b/views/index.erb
@@ -2,7 +2,7 @@
 
 <section>
     <h1>Ticket Viewer</h1>
-    <p>Search for a specific ticket by enterting the ticket number or view all tickets</p>
+    <p>Search for a specific ticket by entering the ticket number or view all tickets</p>
     <div class="container">
         <form action="/ticket-info">
             <input type="text" name="id" placeholder="Enter Ticket Number">
