fixing minor items

--- a/views/list_tickets.erb
+++ b/views/list_tickets.erb
@@ -9,7 +9,7 @@
         <p class="subject">Subject: <%=ticket["subject"]%></p>
         <div class="container">
           <p class="status">Status: <%=ticket["status"]%></p>
-          <p class="ticket-num align-right">Ticket no.: <%=ticket["id"]%></p>
+          <p class="ticket-num align-right">Ticket no: <%=ticket["id"]%></p>
         </div>
       </div>
     </a>
